syntax = "proto3";

package api;

option go_package = "github.com/tienhai2808/microservice_demo-be/common/api";

message Order {
  string ID = 1;
  string CustomerID = 2;
  string Status = 3;
  repeated Item Items = 4;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
}

message Item {
  string ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PriceID = 4;
}

message ItemWithQuantity {
  string ID = 1;
  int32 Quantity = 2;
}

message CreateOrderRequest {
  string CustomerID = 1;
  repeated ItemWithQuantity Items = 2;
}

message CreateOrderResponse {

}
